fix commands